<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="android.example.com.inventoryapp.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/actvity_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hint_product_name"/>

        <EditText
            android:id="@+id/etxt_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_product_name"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/actvity_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hint_product_price"/>

        <EditText
            android:id="@+id/etxt_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_product_price"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/actvity_margin">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Quantity" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="+" />

        <EditText
            android:id="@+id/etxt_product_quantity"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:text="-" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/actvity_margin">

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3"
            android:layout_marginRight="@dimen/actvity_margin"
            android:text="@string/hint_product_quantity"/>

        <Button
            android:id="@+id/btn_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_select_image_text"
            android:layout_gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/actvity_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Supplier Phone"/>

        <EditText
            android:id="@+id/etxt_supplier_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_supplier_phone"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/actvity_margin"
        android:text="Order"
        android:onClick="saveProduct"/>

</LinearLayout>
